--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,72 +1,52 @@
-name: CI
+name: CI Pipeline
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-
+      - name: Checkout code
+        uses: actions/checkout@v2
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.x
-
-      - name: Install dependencies
+          python-version: '3.8'
+      - name: Install Poetry
         run: |
-          python -m pip install --upgrade pip
-          pip install flake8 black isort
-
-      - name: Run flake8
-        run: flake8 .
-
-      - name: Run black
-        run: black --check .
-
-      - name: Run isort
-        run: isort --check-only .
-
+          curl -sSL https://install.python-poetry.org | python3 -
+          echo "${{ runner.home }}/.local/bin" >> $GITHUB_PATH
+      - name: Install dependencies
+        run: poetry install
+      - name: Run linters
+        run: |
+          poetry run black --check .
+          poetry run isort --check-only .
+          poetry run flake8 .
+          poetry run bandit -r .
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-
+      - name: Checkout code
+        uses: actions/checkout@v2
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.x
-
+          python-version: '3.8'
+      - name: Install Poetry
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 -
+          echo "${{ runner.home }}/.local/bin" >> $GITHUB_PATH
       - name: Install dependencies
+        run: poetry install
+      - name: Run tests and generate coverage report
         run: |
-          python -m pip install --upgrade pip
-          pip install pytest coverage
-
-      - name: Run tests
-        run: |
-          coverage run -m pytest
-          coverage report
-          coverage xml
-
+          poetry run pytest --cov=. --cov-report=xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-
-  security:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.x
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install bandit
-
-      - name: Run Bandit
-        run: bandit -r .
